--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,5 @@
 PORT=3000
 
 # MongoDB
-MONGODB_HOST=your_host
-MONGODB_USER=your_mongodb_user
-MONGODB_PASSWORD=your_mongodb_password
+MONGODB_HOST=mongodb://localhost
 MONGODB_DBNAME=your_mongodb_dbname
