--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "license": "ISC",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only  src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/index.ts",
     "build": "npm run clean && tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,15 +16,15 @@
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.7.0",
     "nanoid": "^3.3.7",
+    "typescript": "^5.6.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^22.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/nanoid": "^2.1.0",
-    "@types/node": "^22.7.5",
     "prettier": "^3.3.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
