update db config

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,6 @@
 PORT=3000
 
 # MongoDB
-MONGODB_HOST=mongodb://localhost
-MONGODB_DBNAME=your_mongodb_dbname
+MONGODB_HOST=your_host                # example: mongodb://localhost
+MONGODB_DBNAME=your_mongodb_dbname    # example: my-db
+MONGODB_OPTIONS=your_options          # example: retryWrites=true
